# StructuralTools

./: .gitattributes  .gitignore  README.md  pyproject.toml  shell.nix
docs/source/: conf.py  index.rst
src/: shell.nix
src/structuraltools/: __init__.py  _materials_latex.py  _materials_markdown.py  materials.py  quantities.py  sections.py  template.py  unit.py  utils.py
src/structuraltools/aci/: __init__.py  _chapter_17.py  _chapter_25_templates.py  _development_length_latex.py  _development_length_markdown.py  _sectional_strength_latex.py  _sectional_strength_markdown.py  chapter_17.py  chapter_21.py  chapter_25.py  config.py  development_length.py  materials.py  sectional_strength.py
src/structuraltools/aisc/: __init__.py  _aisc_templates.py  _chapter_B_templates.py  _chapter_F.py  _chapter_F_templates.py  _plate_latex.py  _plate_markdown.py  _shapes_templates.py  _wide_flange_markdown.py  (+7 more)
tests/: test_materials.py  test_sections.py  test_template.py  test_utils.py
tests/aci/: test_chapter_17.py  test_chapter_21.py  test_chapter_25.py  test_development_length.py  test_materials.py  test_sectional_strength.py
tests/aisc/: test_aisc.py  test_aisc_sections.py  test_chapter_B.py  test_chapter_E.py  test_chapter_F.py  test_plate.py  test_shapes.py  test_wide_flange.py
tests/analysis/: test_beam.py  test_loads.py
tests/asce/: reduced_test_reactions.csv  test_chapter_26.py  test_loads.py  test_reactions.csv  test_wind_loading.py
tests/awc/: test_awc_sections.py  test_chapter_2.py  test_chapter_3.py  test_chapter_4.py  test_members.py
tests/io/: test.oex.xml  test_openre.py
(+81 files in other folders)
