[project]
name = "structuraltools"
version = "0.1.0"
description = "Tools, calculations, and code checks for structural engineering"
readme = "README.md"
authors = [
    { name = "Joe Bears", email = "joe.bears77@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.32.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pint>=0.24.4",
    "sympy>=1.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "sphinx>=8.2.1",
    "sphinx-book-theme>=1.1.4",
]
